- Ajuste dos cards da tela 2. - Ajuste do NavBar. -Retirada do collapse-menu-link do navbar. - Inserção dos links das telas no NavBar. ( início, dados dos municípios, inspeções, ajuda e mds) - Inserção dos links no rodapé: facebook, twitter, google+ e ouvidoria do MPRJ. - Edição dos cards PSE, PSB e PROGRAMAS.

--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
@@ -40,7 +40,7 @@
 .equipamentos{
   font-family: "Arial Black", arial-black;
   font-size: 15px;
-  color: slategray;
+  color:lightgray;
   text-align: center;
 
 }
@@ -48,7 +48,7 @@
  .municipio{
    font-family: "Arial Black", arial-black;
    font-size: 15px;
-   color: slategray;
+   color: lightgray;
 
  }
 
