--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
@@ -4,7 +4,7 @@
 
     <tr>
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-        <td class="nome-equipamento">
+        <td class="equipamento">
         <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CENTRO <hr>
         <p class="parágrafo"> Rua José Ferreira Aguiar ( Antiga Rua Ana Nery),128 - Centro - Barra do Piraí</p>
           <p class="parágrafo"> <i class="ion-email"></i>  27.123-150
@@ -14,7 +14,7 @@
       </ba-card>
 
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-        <td class="nome-equipamento">
+        <td class="equipamento">
         <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CALIFÓRNIA DA BARRA <hr>
         <p class="parágrafo"> Rua 32, 142 e 148 - Morada do Vale - Califórnia - Barra do Piraí </p>
            <p class="parágrafo"> <i class="ion-email"></i> 27.163-000
@@ -27,17 +27,17 @@
 
     <tr>
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-        <td class="nome-equipamento">
+        <td class="equipamento">
         <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - AREAL <hr>
         <p class="parágrafo"> Rua Teresópolis, 52 - Areal - Barra do Piraí </p>
           <p class="parágrafo"> <i class="ion-email"></i> 27.150-090
-            <i class="ion-ios-telephone"></i> 24 2445-1546</p>
+            <i class="ion-ios-telephone"> </i> 24 2445-1546</p>
                   Porte <p class="parágrafo"> PEQUENO </p>
         </td>
       </ba-card>
 
         <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-          <td class="nome-equipamento">
+          <td class="equipamento">
             <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - VARGEM ALEGRE <hr>
           <p class="parágrafo">  Rua Elias Antônio, 26 - Santa Rosa - Vargem Alegre - Barra do Piraí </p>
             <p class="parágrafo">  <i class="ion-email"></i>  27.155-000
