--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
@@ -25,14 +25,9 @@
   text-align: center;
 }
 
-.nome-equipamento{
-  color:black;
+.equipamento{
+  color:lightgray;
 }
-
-.porte-equipamento{
-  color:black;
-}
-
 
 .parágrafo{
   color:white;
