--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -19,7 +19,7 @@
 
 
 <div>
-<ba-card title="Lista de Equipamentos" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<ba-card title="Lista de Equipamentos da Assistência Social" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
 <e-buttons></e-buttons>
 
 <div class="row">
@@ -31,6 +31,7 @@
 
 
 <div class="row">
+  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <ba-card title="Dados Municipais" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
     <dados-municipais> </dados-municipais>
   </ba-card>
@@ -38,19 +39,23 @@
   <ba-card title="Indicadores Sociais" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <indicadores-sociais> </indicadores-sociais>
   </ba-card>
-
+  </div>
 </div>
 
 <div class="row">
   <ano-buttons> </ano-buttons>
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+      <ba-card title="PSE"> <pse> </pse></ba-card>
+  </div>
 
-  <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <div class="row">
-      <ba-card> <pse> </pse></ba-card>
-      <ba-card> <psb> </psb></ba-card>
-      <ba-card> <programas> </programas></ba-card>
-    </div>
-  </ba-card>
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+      <ba-card title="PSB"> <psb> </psb></ba-card>
+  </div>
+
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+      <ba-card title="PROGRAMAS"> <programas> </programas></ba-card>
+  </div>
 
 </div>
+
 
