Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) -

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -55,9 +55,9 @@
       <ba-card class="col-xl-6 col xl-0"
                title="EIXOS*" baCardClass="small-card">
         <div class="button-wrapper">
-          <button type="button" class="btn btn-default btn-raised">EQUIPE TÉCNICA</button>
-          <button type="button" class="btn btn-default btn-raised">INFRAESTRUTURA</button>
-          <button type="button" class="btn btn-default btn-raised">PROGRAMAS,PROJETOS,SERVIÇOS E BENEFÍCIOS</button>
+          <button type="button" class="btn btn-default btn-raised"><b>EQUIPE TÉCNICA</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>INFRAESTRUTURA</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>PROGRAMAS,PROJETOS,SERVIÇOS E BENEFÍCIOS</b></button>
         </div>
       </ba-card>
     </div>
@@ -68,31 +68,190 @@
       <ba-card class="col-xl-6 col-xl-0"
                title="MUNICÍPIO*" baCardClass="small-card">
         <div class="button-wrapper">
+          <div class="buttor-wrapper" dropdown>
           <button type="button" class="btn btn-default btn-raised"><b>ANGRA DOS REIS</b></button>
           <button type="button" class="btn btn-default btn-raised"><b>BARRA DO PIRAÍ</b></button>
           <button type="button" class="btn btn-default btn-raised"><b>NITERÓI</b></button>
           <button type="button" class="btn btn-default btn-raised"><b>SÃO GONÇALO</b></button>
           <button type="button" class="btn btn-default btn-raised"><b>RIO DE JANEIRO</b></button>
-          <button addtoggleclass="true" class="btn btn-default dropdown-toggle" dropdowntoggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
-            <b>MACAÉ</b>
 
-          </button>
+            <button addtogleclass="true" class="btn btn-default dropdown-toggle" dropdownToggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
+              <b>MACAÉ</b>
+            </button>
+            <ul class="dropdown-menu" dropdownMenu>
+              <li class="dropdown-item"><a href="#"> A </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Aperibé</a></li>
+              <li class="dropdown-item"><a href="#"> Araruama </a></li>
+              <li class="dropdown-item"><a href="#"> Areal </a></li>
+              <li class="dropdown-item"><a href="#"> Armação dos Búzios </a></li>
+              <li class="dropdown-item"><a href="#"> Arraial do Cabo </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> B </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Barra Mansa </a></li>
+              <li class="dropdown-item"><a href="#"> Belford Roxo </a></li>
+              <li class="dropdown-item"><a href="#"> Bom Jardim </a></li>
+              <li class="dropdown-item"><a href="#"> Bom Jesus do Itabapoana </a></li>
+              <li class="dropdown-divider"></li>
 
 
+              <li class="dropdown-item"><a href="#"> C</a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Cabo Frio </a></li>
+              <li class="dropdown-item"><a href="#"> Cachoeiras de Macacu </a></li>
+              <li class="dropdown-item"><a href="#"> Cambuci</a></li>
+              <li class="dropdown-item"><a href="#"> Campos dos Goytacazes </a></li>
+              <li class="dropdown-item"><a href="#"> Cantagalo </a></li>
+              <li class="dropdown-item"><a href="#"> Carapebus </a></li>
+              <li class="dropdown-item"><a href="#"> Cardoso Moreira </a></li>
+              <li class="dropdown-item"><a href="#"> Carmo</a></li>
+              <li class="dropdown-item"><a href="#"> Casimiro de Abreu </a></li>
+              <li class="dropdown-item"><a href="#"> Comendador Levy Gasparian </a></li>
+              <li class="dropdown-item"><a href="#"> Conceição de Macabu </a></li>
+              <li class="dropdown-item"><a href="#"> Cordeiro </a></li>
+              <li class="dropdown-divider"></li>
 
+              <li class="dropdown-item"><a href="#"> D </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Duas Barras </a></li>
+              <li class="dropdown-item"><a href="#"> Duque de Caxias </a></li>
+              <li class="dropdown-divider"></li>
 
+              <li class="dropdown-item"><a href="#"> E </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Engenheiro Paulo de Frontin </a></li>
+              <li class="dropdown-divider"></li>
 
+              <li class="dropdown-item"><a href="#"> G </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Guapimirim </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> I </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Iguaba Grande </a></li>
+              <li class="dropdown-item"><a href="#"> Itaboraí </a></li>
+              <li class="dropdown-item"><a href="#"> Itaguaí  </a></li>
+              <li class="dropdown-item"><a href="#"> Italva </a></li>
+              <li class="dropdown-item"><a href="#"> Itaocara </a></li>
+              <li class="dropdown-item"><a href="#"> Itaperuna </a></li>
+              <li class="dropdown-item"><a href="#"> Itatiaia </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> J </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Japeri </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> L </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Laje do Muriaé </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> M </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Macuco </a></li>
+              <li class="dropdown-item"><a href="#"> Magé </a></li>
+              <li class="dropdown-item"><a href="#"> Mangaratiba </a></li>
+              <li class="dropdown-item"><a href="#"> Maricá </a></li>
+              <li class="dropdown-item"><a href="#"> Mendes </a></li>
+              <li class="dropdown-item"><a href="#"> Mesquita </a></li>
+              <li class="dropdown-item"><a href="#"> Miguel Pereira </a></li>
+              <li class="dropdown-item"><a href="#"> Miracema </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> N </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Natividade </a></li>
+              <li class="dropdown-item"><a href="#"> Nilópolis </a></li>
+              <li class="dropdown-item"><a href="#"> Nova Friburgo </a></li>
+              <li class="dropdown-item"><a href="#"> Nova Iguaçu </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> P </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Paracambi </a></li>
+              <li class="dropdown-item"><a href="#"> Paraíba do Sul </a></li>
+              <li class="dropdown-item"><a href="#"> Paraty </a></li>
+              <li class="dropdown-item"><a href="#"> Paty do Alferes </a></li>
+              <li class="dropdown-item"><a href="#"> Petrópolis </a></li>
+              <li class="dropdown-item"><a href="#"> Pinheiral </a></li>
+              <li class="dropdown-item"><a href="#"> Piraí </a></li>
+              <li class="dropdown-item"><a href="#"> Porciúncula </a></li>
+              <li class="dropdown-item"><a href="#"> Porto Real </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> Q </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Quatis </a></li>
+              <li class="dropdown-item"><a href="#"> Queimados </a></li>
+              <li class="dropdown-item"><a href="#"> Quissamã </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> R </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Resende </a></li>
+              <li class="dropdown-item"><a href="#"> Rio Bonito </a></li>
+              <li class="dropdown-item"><a href="#"> Rio Claro </a></li>
+              <li class="dropdown-item"><a href="#"> Rio das Flores </a></li>
+              <li class="dropdown-item"><a href="#"> Rio das Ostras </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> S</a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Santa Maria Madalena </a></li>
+              <li class="dropdown-item"><a href="#"> Santo Antônio de Pádua </a></li>
+              <li class="dropdown-item"><a href="#"> São Fidélis </a></li>
+              <li class="dropdown-item"><a href="#"> São Francisco de Itabapoana </a></li>
+              <li class="dropdown-item"><a href="#"> São João da Barra </a></li>
+              <li class="dropdown-item"><a href="#"> São João de Meriti </a></li>
+              <li class="dropdown-item"><a href="#"> São José de Ubá </a></li>
+              <li class="dropdown-item"><a href="#"> São José do Vale do Rio Preto </a></li>
+              <li class="dropdown-item"><a href="#"> São Pedro da Aldeia </a></li>
+              <li class="dropdown-item"><a href="#"> São Sebastião do Alto </a></li>
+              <li class="dropdown-item"><a href="#"> Sapucaia </a></li>
+              <li class="dropdown-item"><a href="#"> Saquearema </a></li>
+              <li class="dropdown-item"><a href="#"> Seropédica </a></li>
+              <li class="dropdown-item"><a href="#"> Silva Jardim </a></li>
+              <li class="dropdown-item"><a href="#"> Sumidouro </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> T </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Tanguá </a></li>
+              <li class="dropdown-item"><a href="#"> Teresópolis </a></li>
+              <li class="dropdown-item"><a href="#"> Trajano de Moraes</a></li>
+              <li class="dropdown-item"><a href="#"> Três Rios </a></li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-item"><a href="#"> V </a></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><a href="#"> Valença </a></li>
+              <li class="dropdown-item"><a href="#"> Varre-Sai </a></li>
+              <li class="dropdown-item"><a href="#"> Vassouras </a></li>
+              <li class="dropdown-item"><a href="#"> Volta Redonda </a></li>
+
+            </ul>
+          </div>
 
         </div>
       </ba-card>
 
 
+
+
+
+
+
+
       <ba-card class="col-xl-6 col-xl-0"
                title="EQUIPAMENTO*" baCardClass="small-card with-scroll feed-panel">
         <div class="button-wrapper">
-          <button type="button" class="btn btn-default btn-raised">CRAS BARRA DO PIRAÍ CENTRO</button>
-          <button type="button" class="btn btn-default btn-raised">CRAS BARRA DO PIRAÍ AREAL</button>
-          <button type="button" class="btn btn-default btn-raised">CRAS BARRA DO PIRAÍ AREAL</button>
+          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ CENTRO</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ AREAL</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ AREAL</b></button>
         </div>
       </ba-card>
     </div>
@@ -166,9 +325,9 @@
           <tr>
             <td><h5>EQUIPE TECNICA ESTÁ EM CONFORMIDADE COM A NOBRH ?</h5></td>
 
-            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
-            <td><b>SIM</b></td>
-            <td><b>NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
@@ -181,9 +340,9 @@
 
             <tr>
               <td><h5>SÃO PROMOVIDAS ATIVIDADES DE CAPACITAÇÃO PARA EQUIPE ?</h5></td>
-              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
-              <td><b>SIM</b></td>
-              <td><b>SIM</b></td>
+              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+              <td><b>&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
 
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
@@ -283,29 +442,29 @@
 
 
 
-
-<button addtoggleclass="true" class="btn btn-default dropdown-toggle" dropdowntoggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
-  <b>MACAÉ</b>
-
-</button>
+<div class="row">
+  <div></div>
 
 
 
-  <div class="btn-group flex-dropdown" dropdown>
-<button addtogleclass="true" class="btn btn-default dropdown-toggle" dropdownToggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
-    <b>MACAÉ</b>
-    </button>
-    <ul class="dropdown-menu" dropdownMenu>
-      <li class="dropdown-item"><a href="#"> A </a></li>
-      <li class="dropdown-divider"></li>
-      <li class="dropdown-item"><a href="#"> Angra dos Reis </a></li>
-      <li class="dropdown-item"><a href="#"> Aperibé</a></li>
-      <li class="dropdown-item"><a href="#"> Araruama </a></li>
-      <li class="dropdown-item"><a href="#"> Areal </a></li>
-      <li class="dropdown-item"><a href="#"> Armação dos Búzios </a></li>
-      <li class="dropdown-item"><a href="#"> Arraial do Cabo </a></li>
-      <li class="dropdown-divider"></li>
+  <ba-card class="col-xl-3 col-xlg-3"
+  title="" baCardClass="medium-card">
+  <img src="{{ ( 'questão'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="btn-primary"><td><b><h3>QUESTÃO</h3></b></td></span>
+  <h4>A equipe está em conformidade com a norma nobrh? </h4>
 
-  </ul>
-</div>
+  <hr color="white">
+
+  <img src="{{ ( 'paleta'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="btn-primary"><td><b><h3>REGRA DE COLORAÇÃO</h3></b></td></span>
+
+  <h4>Se o CRAS for de porte grande (5000 famílias) e a quantidade de técnicos de nível superior for menor
+  que 2 assistentes sociais, 1 psicólogo, e 1 profissional que compõe o SUAS ou a quantidade de técnicos
+  de nível médio for menor que 4: Vermelho. </h4>
+
+  <hr color="white">
+  <img src="{{ ( 'legislacao'| baProfilePicture ) }}" width="45" height="45"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="btn-primary"> <td><h3>LEGISLAÇÃO</h3></td></span>
+  <h4>Resolução nobrh/suas nº 01 de 25 de janeiro de 2017.</h4>
+
+  </ba-card>
+  </div>
+
 
