-Inserção do collapse-menu-link no navbar.

--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -1,7 +1,7 @@
 <div class="page-top clearfix" >
 
-   <!-- <a routerLink="/pages/dashboard"><span></span></a>
-    <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"> </a> -->
+   <a routerLink="/pages/dashboard"><span></span></a>
+    <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"> </a>
 
     <a href="#">
       <img src="{{ ( 'observatorio' | baProfilePicture ) }}" width="150px" height="50px">
